--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
 
     </header>
     <section>
-        Main image
+        <div id="hero image"></div>
     </section>
     <section>
         Club Ethos
