--- a/index.html
+++ b/index.html
@@ -121,7 +121,24 @@
         </div>
     </section>
     <footer>
-        social media here
+       <ul>
+        <li>
+            <a href="https://facebook.com" target="_blank" rel="noopener" 
+            aria-label="Visit our Facebook page (opens in a new tab"><i class="fa-brands fa-facebook"></i></a>
+        </li>
+        <li>
+            <a href="https://instagram.com" target="_blank" rel="noopener" 
+            aria-label="Visit our Instagram page (opens in a new tab"><i class="fa-brands fa-instagram"></i></a>
+        </li>
+        <li>
+            <a href="https://twitter.com" target="_blank" rel="noopener" 
+            aria-label="Visit our Twitter page (opens in a new tab"><i class="fa-brands fa-square-twitter"></i></a>
+        </li>
+        <li>
+            <a href="https://youtube.com" target="_blank" rel="noopener" 
+            aria-label="Visit our youtube page (opens in a new tab"><i class="fa-brands fa-youtube"></i></a>
+        </li>
+       </ul>
     </footer>
     <!--font awesome-->
     <script src="https://kit.fontawesome.com/113031ad3e.js" crossorigin="anonymous"></script>
