--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
                 </li>
                 
                 <li>
-                    <a href="#">Gallery</a>
+                    <a href="gallery.html">Gallery</a>
                 </li>
 
                 <li>
@@ -38,7 +38,7 @@
         <div id="hero-image"></div>
         <div id="cover-text">
             <h2>Love Running</h2>
-            <h3>Dublin Doclands & Phoenix Park</h3>
+            <h3>Dublin Docklands & Phoenix Park</h3>
         </div>
     </section>
     <section id="club-ethos">
@@ -121,7 +121,7 @@
         </div>
     </section>
     <footer>
-       <ul>
+       <ul class="social-networks">
         <li>
             <a href="https://facebook.com" target="_blank" rel="noopener" 
             aria-label="Visit our Facebook page (opens in a new tab"><i class="fa-brands fa-facebook"></i></a>
